# dynamic_mast3r

./: .gitignore  README.md  preprocess_kubric.py  preprocess_pointodyssey.py  pyproject.toml  test.ipynb  train.py  train.sh
mast3r/: losses.py  model.py
mast3r/datasets/: __init__.py  kubric.py  pointodyssey.py
mast3r/datasets/base/: mast3r_base_stereo_view_dataset.py
mast3r/datasets/utils/: __init__.py  cropping.py
